objects/SPG_Referral__c.object
<CustomObject>
    <fields>
        <fullName>Pre_Load_Submitted_Date__c</fullName>
        <description>US-4982173: Tracks the date when pre-load was submitted.</description>
        <inlineHelpText>Tracks the date when pre-load was submitted.</inlineHelpText>
        <label>Pre-Load Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pre_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked as TRUE if the referral was pre-loaded. It will be used to track which records are pre-loaded referrals vs. referrals submitted from an account/contact. Will be hidden from users.</description>
        <label>Pre-load?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ratings_Referral__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. If checked, the interested product type has a field value to indicate that this referral should be routed to Ratings.</description>
        <formula>OR(
INCLUDES(Interested_Product_Type__c,&quot;Ratings: Credit Rating&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Ratings: ESG Evaluation&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Ratings: Second Party Opinion on Bonds (Green, Social, Sustainable)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Ratings: General Interest&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ESG Benchmarking Services (CSA based services)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ESG Corporate Engagement (CSA)&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;Ratings&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;ESG CSA&quot;)
)</formula>
        <inlineHelpText>If checked, this referral was determined to be routed to Ratings.</inlineHelpText>
        <label>Ratings Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Lock__c</fullName>
        <description>US-3855877: DO NOT MODIFY/DELETE. CI Referral package field. Formula field to display image for users to know when a record is locked or unlocked.</description>
        <formula>IF(
NOT(ISBLANK(TEXT(Status__c))),
IMAGE(&quot;/sfc/servlet.shepherd/document/download/06911000001xkQtAAI&quot;, &quot;Locked&quot;,30,30),null)</formula>
        <label>Record Lock</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Routed_Date__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. The date/time informatica routes the lead. This will be automatically updated.</description>
        <label>Routed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referral_Submitted_By__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Formula to extract the first and last name of the referral record owner for the informatica integration.</description>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Submitted_Date__c</fullName>
        <description>US-4982173: For general referrals and lead transfers, the submitted date is the created date. For pre-loads, submitted date is only updated when user submits the referral.</description>
        <formula>IF(AND(Pre_load__c = FALSE, OR(ISPICKVAL(Status__c, &quot;Created&quot;), ISPICKVAL(Status__c, &quot;Routed&quot;), ISPICKVAL(Status__c, &quot;Partially Routed&quot;), ISPICKVAL(Status__c,&quot;Transferred&quot;))), CreatedDate,
IF(AND(Pre_load__c = TRUE, OR(ISPICKVAL(Status__c, &quot;Created&quot;), ISPICKVAL(Status__c, &quot;Routed&quot;), ISPICKVAL(Status__c, &quot;Partially Routed&quot;))), LastModifiedDate,
IF(AND(ISPICKVAL(Status__c,&quot;Pre-Load&quot;)), null,
IF(AND(ISPICKVAL(Status__c,&quot;Disqualified&quot;)),null,
null))))</formula>
        <inlineHelpText>For referrals/transfers, submitted date is the created date of the referral. For pre-loads, submitted date is updated once pre-load is submitted.</inlineHelpText>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referral_Submitter_Email__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Formula field to extract the email associated with the record owner&apos;s user account.</description>
        <formula>Owner:User.Email</formula>
        <label>Submitter Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Submitter_Phone__c</fullName>
        <description>US-4760499: Includes referral owner&apos;s phone number from user record.</description>
        <formula>Owner:User.Phone</formula>
        <inlineHelpText>Referral owner&apos;s phone number.</inlineHelpText>
        <label>Submitter Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Submitter_Region__c</fullName>
        <description>US-4742552: Automatically populates with the region of the user submitting the referral or lead transfer.</description>
        <inlineHelpText>Region of the sales user submitting the referral or lead transfer.</inlineHelpText>
        <label>Submitter Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPGReferralID18Character__c</fullName>
        <description>SFDC-5792 - New field 18 character &apos;SPG Referral ID&apos; in SPG Referrals report type</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to return the 18 digit system generated Unique SPG Referral ID for reporting purposes.</inlineHelpText>
        <label>SPG Referral ID 18 Character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Created&quot;</defaultValue>
        <description>US-3852477: DO NOT MODIFY/DELETE. CI Referral package field. Automatically updates based on referral creation/routing. Users do not update this field.</description>
        <inlineHelpText>If status is &quot;routed&quot;, all leads are successfully routed to the receiving divisions. If the status is &quot;Created&quot; or &quot;Transferred&quot;, none of the leads have been routed. If status is &quot;Partially Routed&quot;, only some leads have been routed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Routed</fullName>
                </value>
                <value>
                    <fullName>Partially Routed</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Pre-Load</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_Status__c</fullName>
        <label>Summary Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Child_Referrals__c</fullName>
        <description>Counts total number of child referral for status syncing between parent and child objects.</description>
        <label>Total Child Referrals</label>
        <summaryForeignKey>SPG_Referral_Lead__c.SPG_Referral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Routed_Referrals__c</fullName>
        <description>Counts the total number of routed referrals records related to the referral submitted. Used in formula to track statuses from child to parent referral records.</description>
        <label>Total Routed Referrals</label>
        <summaryFilterItems>
            <field>SPG_Referral_Lead__c.Routing_Status__c</field>
            <operation>equals</operation>
            <value>Routed</value>
        </summaryFilterItems>
        <summaryForeignKey>SPG_Referral_Lead__c.SPG_Referral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transfer_Lead_To__c</fullName>
        <description>For lead transfers, Informatica uses this field to determine which org the lead should be transferred to.</description>
        <inlineHelpText>Select the divisions the lead should be routed to.</inlineHelpText>
        <label>Transfer Lead To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>ESG CSA</fullName>
                </value>
                <value>
                    <fullName>Indices</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>Ratings</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                    <isActive>false</isActive>
                    <label>Automotive</label>
                </value>
                <value>
                    <fullName>CMS/Product Design</fullName>
                    <isActive>false</isActive>
                    <label>CMS/Product Design</label>
                </value>
                <value>
                    <fullName>ENR</fullName>
                    <isActive>false</isActive>
                    <label>ENR</label>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                    <isActive>false</isActive>
                    <label>Financial Services</label>
                </value>
                <value>
                    <fullName>Platts</fullName>
                    <isActive>false</isActive>
                    <label>Platts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SPG Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.CIRef_Created_Referral</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MY_Pre_Load_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Division__c</columns>
        <columns>Interested_Product_Type__c</columns>
        <columns>Division_Sent_From__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pre-Load</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.CIRef_Created_Referral</value>
        </filters>
        <label>My Pre-Load Referrals</label>
    </listViews>
    <listViews>
        <fullName>My_Lead_Transfers</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.Lead_Transfer</value>
        </filters>
        <label>My Lead Transfers</label>
    </listViews>
    <listViews>
        <fullName>My_Lead_Transfers_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.Lead_Transfer</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>My Lead Transfers This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Lead_Transfers_This_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.Lead_Transfer</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>My Lead Transfers This Quarter</label>
    </listViews>
    <listViews>
        <fullName>My_Pre_Loaded_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Division__c</columns>
        <columns>Interested_Product_Type__c</columns>
        <columns>Division_Sent_From__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pre-Load</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.CIRef_Created_Referral</value>
        </filters>
        <label>Pre-Load Referrals Testing</label>
    </listViews>
    <listViews>
        <fullName>My_Re_Referral</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.Re_Referral</value>
        </filters>
        <label>My Re-Referrals</label>
    </listViews>
    <listViews>
        <fullName>My_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.CIRef_Created_Referral</value>
        </filters>
        <label>My Referrals</label>
    </listViews>
    <listViews>
        <fullName>My_Referrals_Created_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.CIRef_Created_Referral</value>
        </filters>
        <label>My Referrals Created This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Referrals_Created_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.CIRef_Created_Referral</value>
        </filters>
        <label>My Referrals Created This Week</label>
    </listViews>
    <listViews>
        <fullName>My_Referrals_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Referral_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SPG_Referral__c.CIRef_Created_Referral</value>
        </filters>
        <label>My Referrals Created Today</label>
    </listViews>
    <nameField>
        <displayFormat>SPG Referral-{000000}</displayFormat>
        <label>SPG Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPG Referrals</pluralLabel>
    <recordTypes>
        <fullName>CIRef_Created_Referral</fullName>
        <active>true</active>
        <description>Referrals created by divisional account managers.</description>
        <label>Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Transfer</fullName>
        <active>true</active>
        <description>Non-referral leads that are being transferred to other divisions.</description>
        <label>Lead Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Re_Referral</fullName>
        <active>true</active>
        <description>Referrals re-submitted from a lead.</description>
        <label>Re-Referral</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AccountValidationCheck</fullName>
        <active>true</active>
        <description>SFDC-5509 Account Restriction for Referrals</description>
        <errorConditionFormula>If(OR($Setup.SystemMutedValidationRules__c.SPGReferral__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,OR(ISPICKVAL(Account__r.DataGovernanceStatus__c,&apos;Unapproved&apos;),ISPICKVAL(Account__r.Status__c,&apos;Inactive - Out of Business&apos;),ISPICKVAL(Account__r.Status__c,&apos;Inactive - Invalid&apos;),ISPICKVAL(Account__r.Status__c,&apos;Inactive - Lifecycle&apos;))))</errorConditionFormula>
        <errorMessage>Due to Unapproved/Inactive Account, SPG Referral records cannot be created for the selected Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CIREF_InterestedProductsRequired</fullName>
        <active>true</active>
        <description>US-4085954: DO NOT MODIFY/DELETE. Requires interested products to be filled in before submitting a referral, this field is needed for the integration to route the lead to the right division.</description>
        <errorConditionFormula>ISBLANK(Interested_Product_Type__c) &amp;&amp; (RecordType.Name = &quot;Referral&quot;)</errorConditionFormula>
        <errorMessage>You must select interested products to submit the referral.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactValidationCheck</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR($Setup.SystemMutedValidationRules__c.SPGReferral__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,OR(ISPICKVAL(Contact__r.EmailOptOut__c,&apos;Global Email Opt Out&apos;),ISPICKVAL(Contact__r.EmailOptOut__c,&apos;Country Email Exclusion (ie CASL/GDPR)&apos;), NOT(ISBLANK(Contact__r.X3rdPartyOptOut__c)),Contact__r.OutreachOptOut__c )))</errorConditionFormula>
        <errorMessage>Due to contact privacy restrictions, SPG Referral records cannot be created for the selected contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_email_or_phone_must_be_entered</fullName>
        <active>true</active>
        <description>US-3852551: DO NOT MODIFY/DELETE. Referrals need one piece of contact information (email/phone) in order for them to be submitted for routing, otherwise the receiving division will not have enough information to follow up on the information.</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, &quot;Pre-Load&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Disqualified&quot;)),
ISBLANK(Contact_Email__c),
OR(ISBLANK(Contact_Phone__c)))</errorConditionFormula>
        <errorMessage>An email or phone number is needed for the contact to submit the referral.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CountryRequired</fullName>
        <active>true</active>
        <description>US-4249439: Require contact country for submitting a referral since its required on the lead record.</description>
        <errorConditionFormula>AND(
ISBLANK(TEXT(Contact_Country__c)),
NOT(ISPICKVAL(Status__c, &quot;Pre-Load&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Disqualified&quot;))
)</errorConditionFormula>
        <errorDisplayField>Contact_Country__c</errorDisplayField>
        <errorMessage>You must enter a country on the contact&apos;s mailing address to submit a referral.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Division_Sent_From_Required_for_IHS</fullName>
        <active>true</active>
        <description>US-4346035: IHS Markit has 4 divisions in one Salesforce org, we need to track the specific division name. The division sent from will be pre-filled from the user&apos;s HR Business Line field. For those that do not match, users will have to select a division.</description>
        <errorConditionFormula>ISBLANK(TEXT(Division_Sent_From__c))</errorConditionFormula>
        <errorDisplayField>Division_Sent_From__c</errorDisplayField>
        <errorMessage>You must select the division that is sending the referral in order to submit the referral.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InactiveContact</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR($Setup.SystemMutedValidationRules__c.SPGReferral__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,ISPICKVAL(Contact__r.Status__c, &apos;Inactive&apos;) ))</errorConditionFormula>
        <errorMessage>Due to Inactive Contact, SPG Referral records cannot be created for the selected contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preload_checkbox</fullName>
        <active>true</active>
        <description>Once checked, pre-load checkbox can&apos;t be unchecked.</description>
        <errorConditionFormula>AND(
ISCHANGED(Pre_load__c),
PRIORVALUE(Pre_load__c) = TRUE)</errorConditionFormula>
        <errorMessage>Pre-loaded referrals need to be checked off to track how the referral was created. Contact an admin if you need more support.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preload_owner_update</fullName>
        <active>true</active>
        <description>Only system admins can update owner field on pre-loaded referrals to prevent misassignment.</description>
        <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp; NOT($Profile.Name = &quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Only system admins can reassign and update referral owners. Please contact your system admin if the referral needs to be reassigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StateRequiredForUS_CanadaContactCountry</fullName>
        <active>true</active>
        <description>US-4249439: Contact State/Province is required when US and Canada is selected as contact country.</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, &quot;Pre-Load&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Disqualified&quot;)),
ISBLANK(TEXT(Contact_State_Province__c)),
(RecordType.Name = &quot;Referral&quot;),
OR(
ISPICKVAL(Contact_Country__c, &quot;United States&quot;),
ISPICKVAL(Contact_Country__c, &quot;USA&quot;),
ISPICKVAL(Contact_Country__c, &quot;Canada&quot;),
ISPICKVAL(Contact_Country__c, &quot;Australia&quot;)))</errorConditionFormula>
        <errorMessage>Contact State/Province is required when contact country is United States, Canada, and Australia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Synergy_Campaign_Required_for_Preloads</fullName>
        <active>true</active>
        <description>Synergy campaign tag is required on preloaded referrals only for tracking purposes.</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;Pre-Load&quot;) &amp;&amp; ISBLANK(Lead_Campaign_Source__c)</errorConditionFormula>
        <errorMessage>Synergy campaign is required for pre-loaded referrals.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TransferLeadUniqueDivision</fullName>
        <active>true</active>
        <description>Lead can&apos;t be transferred to a division which already received it.</description>
        <errorConditionFormula>AND(ISNEW(),
OR(
AND(CONTAINS(Lead__r.Division_Transferred_To__c, &quot;Automotive&quot;), Includes(Transfer_Lead_To__c, &quot;Automotive&quot;)),
AND(CONTAINS(Lead__r.Division_Transferred_To__c, &quot;CI&quot;), Includes(Transfer_Lead_To__c, &quot;CI&quot;)),
AND(CONTAINS(Lead__r.Division_Transferred_To__c, &quot;CMS/Product Design&quot;), Includes(Transfer_Lead_To__c, &quot;CMS/Product Design&quot;)),
AND(CONTAINS(Lead__r.Division_Transferred_To__c, &quot;Financial Services&quot;), Includes(Transfer_Lead_To__c, &quot;Financial Services&quot;)),
AND(CONTAINS(Lead__r.Division_Transferred_To__c, &quot;Indices&quot;), Includes(Transfer_Lead_To__c, &quot;Indices&quot;)),
AND(CONTAINS(Lead__r.Division_Transferred_To__c, &quot;MI&quot;), Includes(Transfer_Lead_To__c, &quot;MI&quot;)),
AND(CONTAINS(Lead__r.Division_Transferred_To__c, &quot;Ratings&quot;), Includes(Transfer_Lead_To__c, &quot;Ratings&quot;)),
AND(CONTAINS(Lead__r.Division_Transferred_To__c, &quot;Platts&quot;), Includes(Transfer_Lead_To__c, &quot;Platts&quot;)),
AND(INCLUDES(Lead__r.SPG_Referral_Product_Interest__c, &quot;MI&quot;), MI_Referral__c = TRUE),
AND(INCLUDES(Lead__r.SPG_Referral_Product_Interest__c, &quot;Ratings&quot;), Ratings_Referral__c = TRUE),
AND(INCLUDES(Lead__r.SPG_Referral_Product_Interest__c, &quot;Platts&quot;), Platts_Referral__c = TRUE),
AND(INCLUDES(Lead__r.SPG_Referral_Product_Interest__c, &quot;Indices&quot;), Indices_Referral__c = TRUE),
AND(INCLUDES(Lead__r.SPG_Referral_Product_Interest__c, &quot;Financial Services&quot;), Financial_Services_Referral__c = TRUE),
AND(INCLUDES(Lead__r.SPG_Referral_Product_Interest__c, &quot;Automotive&quot;), Automotive_Referral__c = TRUE),
AND(INCLUDES(Lead__r.SPG_Referral_Product_Interest__c, &quot;CMS/Product Design&quot;), CMS_Product_Design_Referral__c = TRUE),
AND(INCLUDES(Lead__r.SPG_Referral_Product_Interest__c, &quot;CI&quot;), Platts_Referral__c = TRUE)
))</errorConditionFormula>
        <errorMessage>This lead has already been sent to a division selected on the form. You must send the lead to a new division. You can&apos;t re-send leads to your own division.</errorMessage>
    </validationRules>
</CustomObject>